<resources>
    <string name="app_name">PA</string>
    <string name="search">Search</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="no_results_found">No results found</string>
    <string name="generate_report">Generate Report</string>
    <string name="download_report">Download Report</string>
</resources>